maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: too many arguments for method getIndication: (x: Int, y: Int)Int
	if(getIndication(x,y,i) == 9999) {
                        ^